# 3dmath

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  mymatrix.cpp  myvector.cpp  test_assignment_ops.cpp  test_matrix.cpp  test_vector.cpp
doc/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  class_matrix2-members.html  class_matrix2.html  class_matrix3-members.html  class_matrix3.html  class_matrix4-members.html  class_matrix4.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen__log_8txt.html  examples.html  files.html  functions.html  functions_c.html  functions_d.html  functions_e.html  functions_func.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_g.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_n.html  functions_func_o.html  functions_func_s.html  functions_func_t.html  functions_func_v.html  functions_g.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_rela.html  functions_s.html  functions_t.html  (+48 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+17 more)
include/: mathutils.hpp  mymatrix.hpp  myvector.hpp
